--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -10,7 +10,12 @@
 
     <h1>Order your taco creations!</h1>
     <img th:src="@{/images/TacoCloud.png}"/>
+
+    <h3>Your tacos in this order:</h3>
     <a th:href="@{/design}" id="another">Design another taco</a><br/>
+    <ul>
+        <li th:each="taco : ${order.tacos}"><span th:text="${taco.name}">taco name</span></li>
+    </ul>
 
     <div th:if="${#fields.hasErrors()}">
         <span class="validationError">
@@ -20,31 +25,31 @@
 
     <h3>Deliver my taco masterpieces to...</h3>
     <label for="name">Name: </label>
-    <input type="text" th:field="*{name}"/>
+    <input type="text" th:field="*{deliveryName}"/>
     <span class="validationError"
-          th:if="${#fields.hasErrors('name')}"
-          th:errors="*{name}">Name Error</span>
+          th:if="${#fields.hasErrors('deliveryName')}"
+          th:errors="*{deliveryName}">Name Error</span>
 
     <br/>
     <label for="street">Street address: </label>
-    <input type="text" th:field="*{street}"/>
+    <input type="text" th:field="*{deliveryStreet}"/>
     <span class="validationError"
-          th:if="${#fields.hasErrors('street')}"
-          th:errors="*{street}">Street Error</span>
+          th:if="${#fields.hasErrors('deliveryStreet')}"
+          th:errors="*{deliveryStreet}">Street Error</span>
 
     <br/>
     <label for="city">City: </label>
-    <input type="text" th:field="*{city}"/>
+    <input type="text" th:field="*{deliveryCity}"/>
     <span class="validationError"
-          th:if="${#fields.hasErrors('city')}"
-          th:errors="*{city}">City Error</span>
+          th:if="${#fields.hasErrors('deliveryCity')}"
+          th:errors="*{deliveryCity}">City Error</span>
 
     <br/>
     <label for="province">Province: </label>
-    <input type="text" th:field="*{province}"/>
+    <input type="text" th:field="*{deliveryProvince}"/>
     <span class="validationError"
-          th:if="${#fields.hasErrors('province')}"
-          th:errors="*{province}">City Error</span>
+          th:if="${#fields.hasErrors('deliveryProvince')}"
+          th:errors="*{deliveryProvince}">City Error</span>
 
     <br/>
     <label for="zip">Zip code: </label>
