--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,8 +7,16 @@
 </head>
 <body>
 <h1>Design your taco!</h1>
+<h2>Feeling hungry, <span th:text="${user.fullname}">NAME</span>?</h2>
+
+<form method="POST" th:action="@{/logout}" id="logoutForm">
+    <input type="submit" value="Logout"/>
+</form>
 <img th:src="@{/images/TacoCloud.png}"/>
-<form method="POST" th:object="${design}">
+
+
+<form method="POST" th:object="${design}"  th:action="@{/design}">
+
 
     <span class="validationError"
           th:if="${#fields.hasErrors('ingredients')}"
@@ -16,7 +24,6 @@
 
     <div class="grid">
 
-        <div class="ingredient-group" id="wraps">
             <h3>Designate your wrap:</h3>
             <div th:each="ingredient : ${wrap}">
                 <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
