--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -4,82 +4,92 @@
 <head>
     <title>Taco Cloud</title>
     <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
-<h1>Design your taco!</h1>
-<h2>Feeling hungry, <span th:text="${user.fullname}">NAME</span>?</h2>
+    <div class="container-fluid">
+        <div class="row">
 
-<form method="POST" th:action="@{/logout}" id="logoutForm">
-    <input type="submit" value="Logout"/>
-</form>
-<img th:src="@{/images/TacoCloud.png}"/>
+            <div class="col-3">
+
+                <img class="img-fluid" th:src="@{/images/TacoCloud.png}"/>
+                <h1>Design your taco!</h1>
+                <h2>Feeling hungry, <span th:text="${user.fullname}">NAME</span>?</h2>
+
+                <form method="POST" th:action="@{/logout}" id="logoutForm">
+                    <input type="submit" class="btn btn-default btn-sm" value="Logout">
+                    </input>
+                </form>
+            </div>
+
+            <div class="col-9">
+                <br>
+                <form method="POST" th:object="${design}" th:action="@{/design}">
+
+                    <div class="text-danger" th:if="${#fields.hasErrors('ingredients')}" th:errors="*{ingredients}">
+                        Ingredient Error
+                    </div>
 
 
-<form method="POST" th:object="${design}"  th:action="@{/design}">
+                    <div class="row">
+                        <div class="col-sm-4" id="wrap">
+                            <h3>Designate your wrap:</h3>
+                            <div class="form-check" th:each="ingredient : ${wrap}">
+                                <input name="ingredients" type="checkbox" class="form-check-input" th:value="${ingredient.id}" th:id="${ingredient.id} + '-wrap'"/>
+                                <label class="form-check-label" th:for="${ingredient.id}  + '-wrap'" th:text="${ingredient.name}">INGREDIENT</label>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4" id="proteins">
+                            <h3>Pick your protein:</h3>
+                            <div class="form-check" th:each="ingredient : ${protein}">
+                                <input name="ingredients" type="checkbox" class="form-check-input" th:value="${ingredient.id}" th:id="${ingredient.id} + '-protein'" />
+                                <label class="form-check-label" th:for="${ingredient.id} + '-protein'"  th:text="${ingredient.name}">INGREDIENT</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-4" id="cheeses">
+                            <h3>Choose your cheese:</h3>
+                            <div class="form-check" th:each="ingredient : ${cheese}">
+                                <input name="ingredients" type="checkbox" class="form-check-input" th:value="${ingredient.id}" th:id="${ingredient.id} + '-cheese'"/>
+                                <label class="form-check-label" th:for="${ingredient.id} + '-cheese'" th:text="${ingredient.name}">INGREDIENT</label>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4" id="veggies">
+                            <h3>Determine your veggies:</h3>
+                            <div class="form-check" th:each="ingredient : ${veggies}">
+                                <input name="ingredients" type="checkbox" class="form-check-input" th:value="${ingredient.id}" th:id="${ingredient.id} + '-veggies'"/>
+                                <label class="form-check-label" th:for="${ingredient.id} + '-veggies'" th:text="${ingredient.name}">INGREDIENT</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-4" id="sauces">
+                            <h3>Select your sauce:</h3>
+                            <div class="form-check" th:each="ingredient : ${sauce}">
+                                <input name="ingredients" type="checkbox" class="form-check-input" th:value="${ingredient.id}" th:id="${ingredient.id} + '-sauce'" />
+                                <label class="form-check-label" th:for="${ingredient.id} + '-sauce'" th:text="${ingredient.name}">INGREDIENT</label>
+                            </div>
+                        </div>
+                    </div>
 
 
-    <span class="validationError"
-          th:if="${#fields.hasErrors('ingredients')}"
-          th:errors="*{ingredients}">Ingredient Error</span>
-
-    <div class="grid">
-
-            <h3>Designate your wrap:</h3>
-            <div th:each="ingredient : ${wrap}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
-                <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                    <div class="form-group">
+                        <h3>Name your taco creation:</h3>
+                        <input type="text" class="form-control" th:field="*{name}" placeholder="Name your taco"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+                            Name Error
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-success">Submit your taco</button>
+                </form>
             </div>
         </div>
-
-        <div class="ingredient-group" id="proteins">
-            <h3>Pick your protein:</h3>
-            <div th:each="ingredient : ${protein}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
-                <span th:text="${ingredient.name}">INGREDIENT</span><br/>
-            </div>
-        </div>
-
-        <div class="ingredient-group" id="cheeses">
-            <h3>Choose your cheese:</h3>
-            <div th:each="ingredient : ${cheese}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
-                <span th:text="${ingredient.name}">INGREDIENT</span><br/>
-            </div>
-        </div>
-
-        <div class="ingredient-group" id="veggies">
-            <h3>Determine your veggies:</h3>
-            <div th:each="ingredient : ${veggies}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
-                <span th:text="${ingredient.name}">INGREDIENT</span><br/>
-            </div>
-        </div>
-
-        <div class="ingredient-group" id="sauces">
-            <h3>Select your sauce:</h3>
-            <div th:each="ingredient : ${sauce}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
-                <span th:text="${ingredient.name}">INGREDIENT</span><br/>
-            </div>
-        </div>
-
     </div>
-    <div>
-        <h3>Name your taco creation:</h3>
-        <input type="text" th:field="*{name}"/>
-        <!--span th:text="${#fields.hasErrors('name')}">XXX</span-->
-        <span class="validationError"
-              th:if="${#fields.hasErrors('name')}"
-              th:errors="*{name}">Name Error</span>
-
-        <br/>
-        <button>Submit your taco</button>
-    </div>
-</form>
 </body>
 </html>
