--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Taco Cloud</title>
-</head>
+    <head>
+        <title>Taco Cloud</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    </head>
 
-<body>
-    <h1>Welcome to...</h1>
-    <img th:src="@{/images/TacoCloud.png}"/>
+    <body>
+        <div class="container-fluid">
+            <h1>Welcome to...</h1>
+            <img th:src="@{/images/TacoCloud.png}"/>
 
-    <form method="POST" th:action="@{/logout}" id="logoutForm">
-        <input type="submit" value="Logout"/>
-    </form>
+            <form method="POST" th:action="@{/logout}" id="logoutForm">
+                <input type="submit" class="btn btn-default btn-sm" value="Logout"/>
+            </form>
 
-    <a th:href="@{/design}" id="design">Design a taco</a>
-</body>
+            <p>
+            <div>
+                <a th:href="@{/design}" id="design">Design a taco</a>
+            </div>
+        </div>
+    </body>
 </html>
