--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,23 +3,39 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Taco Cloud</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
-<h1>Login</h1>
-<img th:src="@{/images/TacoCloud.png}"/>
-<div th:if="${error}">
-    Unable to login. Check your username and password.
-</div>
-<p>New here? Click
-    <a th:href="@{/register}">here</a> to register.</p>
-<!-- tag::thAction[] -->
-<form method="POST" th:action="@{/login}" id="loginForm">
-    <!-- end::thAction[] -->
-    <label for="username">Username: </label>
-    <input type="text" name="username" id="username" /><br/>
-    <label for="password">Password: </label>
-    <input type="password" name="password" id="password" /><br/>
-    <input type="submit" value="Login"/>
-</form>
+        <div class="row">
+
+            <div class="col-4">
+                <h1>Login</h1>
+                <img class="img-fluid" th:src="@{/images/TacoCloud.png}"/>
+                <div th:if="${error}">
+                    Unable to login. Check your username and password.
+                </div>
+            </div>
+
+
+            <div class="col-7">
+                <br>
+                <p>New here? Click
+                <a th:href="@{/register}">here</a> to register.
+                </p>
+
+
+                <form method="POST" th:action="@{/login}" id="loginForm">
+                    <div class="form-group">
+                        <input type="text" class="form-control col-sm-5" name="username" id="username" />
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control col-sm-5" name="password" id="password" />
+                    </div>
+                    <input type="submit" class="btn btn-lg btn-primary btn-block btn-signin col-sm-5" value="Login"/>
+
+                </form>
+            </div>
+        </div>
 </body>
 </html>
