--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -1,93 +1,132 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Taco Cloud</title>
-    <link rel="stylesheet" th:href="@{/styles.css}" />
-</head>
-<body>
-<form method="POST" th:action="@{/logout}" id="logoutForm">
-    <input type="submit" value="Logout"/>
-</form>
+    <head>
+        <title>Taco Cloud</title>
+        <link rel="stylesheet" th:href="@{/styles.css}" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    </head>
 
-<form method="POST" th:action="@{/orders}" th:object="${order}">
+    <body>
+        <div class="container-fluid">
+            <p></p>
+            <form method="POST" th:action="@{/logout}" id="logoutForm">
+                <input type="submit" class="btn btn-default btn-sm" value="Logout"/>
+            </form>
 
-    <h1>Order your taco creations!</h1>
-    <img th:src="@{/images/TacoCloud.png}"/>
+            <form method="POST" th:action="@{/orders}" th:object="${order}">
 
-    <h3>Your tacos in this order:</h3>
-    <a th:href="@{/design}" id="another">Design another taco</a><br/>
-    <ul>
-        <li th:each="taco : ${order.tacos}"><span th:text="${taco.name}">taco name</span></li>
-    </ul>
+                <h1>Order your taco creations!</h1>
+                <img th:src="@{/images/TacoCloud.png}"/>
 
-    <div th:if="${#fields.hasErrors()}">
-        <span class="validationError">
-        Please correct the problems below and resubmit.
-        </span>
-    </div>
+                <h3>Your tacos in this order:</h3>
+                <a th:href="@{/design}" id="another">Design another taco</a><br/>
+                <ul>
+                    <li th:each="taco : ${order.tacos}"><span th:text="${taco.name}">taco name</span></li>
+                </ul>
 
-    <h3>Deliver my taco masterpieces to...</h3>
-    <label for="name">Name: </label>
-    <input type="text" th:field="*{deliveryName}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('deliveryName')}"
-          th:errors="*{deliveryName}">Name Error</span>
+                <h3>Deliver my taco masterpieces to...</h3>
 
-    <br/>
-    <label for="street">Street address: </label>
-    <input type="text" th:field="*{deliveryStreet}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('deliveryStreet')}"
-          th:errors="*{deliveryStreet}">Street Error</span>
-
-    <br/>
-    <label for="city">City: </label>
-    <input type="text" th:field="*{deliveryCity}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('deliveryCity')}"
-          th:errors="*{deliveryCity}">City Error</span>
-
-    <br/>
-    <label for="province">Province: </label>
-    <input type="text" th:field="*{deliveryProvince}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('deliveryProvince')}"
-          th:errors="*{deliveryProvince}">City Error</span>
-
-    <br/>
-    <label for="zip">Zip code: </label>
-    <input type="text" th:field="*{zip}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('zip')}"
-          th:errors="*{zip}">Zip Error</span>
+                <div class="form-group row">
+                    <label for="name" class="col-sm-2 col-form-label">Name: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{deliveryName}"/>
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('deliveryName')}"
+                          th:errors="*{deliveryName}">Name Error</div>
+                </div>
 
 
-    <br/>
-    <h3>Here's how I'll pay...</h3>
-    <label for="number">Credit Card #: </label>
-    <input type="text" th:field="*{number}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('number')}"
-          th:errors="*{number}">Number Error</span>
+                <div class="form-group row">
+                    <label for="street" class="col-sm-2 col-form-label">Street address: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{deliveryStreet}"/>
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('deliveryStreet')}"
+                          th:errors="*{deliveryStreet}">Street Error
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="city" class="col-sm-2 col-form-label">City: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{deliveryCity}"/>
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('deliveryCity')}"
+                          th:errors="*{deliveryCity}">City Error
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="province" class="col-sm-2 col-form-label">Province: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{deliveryProvince}"/>
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('deliveryProvince')}"
+                          th:errors="*{deliveryProvince}">City Error
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="zip" class="col-sm-2 col-form-label">Zip code: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{zip}"/>
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('zip')}"
+                          th:errors="*{zip}">Zip Error
+                    </div>
+                </div>
+
+                <h3>Here's how I'll pay...</h3>
+
+                <div class="form-group row">
+                    <label for="number" class="col-sm-2 col-form-label">Credit Card #: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{number}" placeholder="Credit Card #"/>
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('number')}"
+                          th:errors="*{number}">Number Error
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="expiration" class="col-sm-2 col-form-label">Expiration: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{expiration}" placeholder="Expiration" />
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('expiration')}"
+                         th:errors="*{expiration}">Expiration Error
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="cvv" class="col-sm-2 col-form-label">CVV: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{cvv}" placeholder="CVV" />
+                    </div>
+                    <div class="text-danger"
+                          th:if="${#fields.hasErrors('cvv')}"
+                         th:errors="*{cvv}">CVV Error
+                    </div>
+                </div>
+
+                <div class="form-group" th:if="${#fields.hasErrors()}">
+                    <div class="text-danger">
+                    Please correct the problems below and resubmit.
+                    </div>
+                </div>
 
 
-    <br/>
-    <label for="expiration">Expiration: </label>
-    <input type="text" th:field="*{expiration}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('expiration')}"
-          th:errors="*{expiration}">Expiration Error</span>
-
-    <br/>
-    <label for="cvv">CVV: </label>
-    <input type="text" th:field="*{cvv}"/>
-    <span class="validationError"
-          th:if="${#fields.hasErrors('cvv')}"
-          th:errors="*{cvv}">CVV Error</span>
-
-    <br/>
-    <input type="submit" value="Submit order"/>
-</form>
-</body>
+                <input type="submit" class="btn btn-success" value="Submit order"/>
+                <p></p>
+            </form>
+        </div>
+    </body>
 </html>
