--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,30 +3,115 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Taco Cloud</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
-<h1>Register</h1>
-<img th:src="@{/images/TacoCloud.png}"/>
-<form method="POST" th:action="@{/register}" id="registerForm">
-    <label for="username">Username: </label>
-    <input type="text" name="username"/><br/>
-    <label for="password">Password: </label>
-    <input type="password" name="password"/><br/>
-    <label for="confirm">Confirm password: </label>
-    <input type="password" name="confirm"/><br/>
-    <label for="fullname">Full name: </label>
-    <input type="text" name="fullname"/><br/>
-    <label for="street">Street: </label>
-    <input type="text" name="street"/><br/>
-    <label for="city">City: </label>
-    <input type="text" name="city"/><br/>
-    <label for="province">Province: </label>
-    <input type="text" name="province"/><br/>
-    <label for="zip">Zip: </label>
-    <input type="text" name="zip"/><br/>
-    <label for="phoneNumber">Phone number: </label>
-    <input type="text" name="phoneNumber"/><br/>
-    <input type="submit" value="Register"/>
-</form>
+
+    <div class="container-fluid">
+        <div class="row">
+
+        <div class="col-4">
+            <h1>Register</h1>
+            <img class="img-fluid" th:src="@{/images/TacoCloud.png}"/>
+        </div>
+
+        <div class="col-7">
+            <form method="POST" th:action="@{/register}" th:object="${registrationForm}" id="registerForm">
+                <div class="form-group row">
+                    <label for="username" class="col-sm-2 col-form-label">Username: </label>
+                    <div class="col-sm-6" >
+                        <input type="text" class="form-control" th:field="*{username}" placeholder="Username"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
+                            Name Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="password" class="col-sm-2 col-form-label">Password: </label>
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" th:field="*{password}" placeholder="Password"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+                            Password Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="confirmPassword" class="col-sm-2 col-form-label">Confirm password: </label>
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" th:field="*{confirmPassword}" placeholder="Confirm password"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}">
+                            Password Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="fullname" class="col-sm-2 col-form-label">Full name: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{fullname}" placeholder="Full name"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}">
+                            fullname Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="street" class="col-sm-2 col-form-label">Street: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{street}" placeholder="Street"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('street')}" th:errors="*{street}">
+                            fullname Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="city" class="col-sm-2 col-form-label">City: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{city}" placeholder="City"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('city')}" th:errors="*{city}">
+                            city Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="province" class="col-sm-2 col-form-label">Province: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{province}" placeholder="Province"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('province')}" th:errors="*{province}">
+                            city Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="zip" class="col-sm-2 col-form-label">Zip: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{zip}" placeholder="Zip"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('zip')}" th:errors="*{zip}">
+                            zip Error
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="phoneNumber" class="col-sm-2 col-form-label">Phone number: </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" th:field="*{phoneNumber}" placeholder="Phone number"/>
+                        <div class="text-danger" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">
+                            phoneNumber Error
+                        </div>
+                    </div>
+                </div>
+                <input type="submit" value="Register"/>
+            </form>
+        </div>
+
+        </div>
+    </div>
 </body>
 </html>
