--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <div class="container-fluid my-4">
         <div class="row">
 
             <div class="col-4">
@@ -18,8 +19,7 @@
             </div>
 
 
-            <div class="col-7">
-                <br>
+            <div class="col-8">
                 <p>New here? Click
                 <a th:href="@{/register}">here</a> to register.
                 </p>
@@ -27,15 +27,16 @@
 
                 <form method="POST" th:action="@{/login}" id="loginForm">
                     <div class="form-group">
-                        <input type="text" class="form-control col-sm-5" name="username" id="username" />
+                        <input type="text" class="form-control col-5" name="username" id="username" placeholder="Username" />
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control col-sm-5" name="password" id="password" />
+                        <input type="password" class="form-control col-5" name="password" id="password" placeholder="Password"/>
                     </div>
-                    <input type="submit" class="btn btn-lg btn-primary btn-block btn-signin col-sm-5" value="Login"/>
+                    <input type="submit" class="btn btn-lg btn-primary btn-block btn-signin col-5" value="Login"/>
 
                 </form>
             </div>
         </div>
+    </div>
 </body>
 </html>
