--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -8,125 +8,136 @@
     </head>
 
     <body>
-        <div class="container-fluid">
-            <p></p>
-            <form method="POST" th:action="@{/logout}" id="logoutForm">
-                <input type="submit" class="btn btn-default btn-sm" value="Logout"/>
-            </form>
+        <div class="container-fluid my-4">
 
-            <form method="POST" th:action="@{/orders}" th:object="${order}">
+            <div class="row">
+                <div class="col-4">
 
-                <h1>Order your taco creations!</h1>
-                <img th:src="@{/images/TacoCloud.png}"/>
+                    <h1>Order your taco creations!</h1>
+                    <img th:src="@{/images/TacoCloud.png}" class="img-fluid"/>
 
-                <h3>Your tacos in this order:</h3>
-                <a th:href="@{/design}" id="another">Design another taco</a><br/>
-                <ul>
-                    <li th:each="taco : ${order.tacos}"><span th:text="${taco.name}">taco name</span></li>
-                </ul>
-
-                <h3>Deliver my taco masterpieces to...</h3>
-
-                <div class="form-group row">
-                    <label for="name" class="col-sm-2 col-form-label">Name: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{deliveryName}"/>
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('deliveryName')}"
-                          th:errors="*{deliveryName}">Name Error</div>
+                    <form method="POST" th:action="@{/logout}" id="logoutForm">
+                        <input type="submit" class="btn btn-default btn-sm" value="Logout"/>
+                    </form>
                 </div>
 
+                <div class="col-8">
 
-                <div class="form-group row">
-                    <label for="street" class="col-sm-2 col-form-label">Street address: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{deliveryStreet}"/>
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('deliveryStreet')}"
-                          th:errors="*{deliveryStreet}">Street Error
-                    </div>
+                    <form method="POST" th:action="@{/orders}" th:object="${order}">
+
+                        <h3>Your tacos in this order:</h3>
+                        <div class="row mb-3">
+                            <div class="col-12">
+                                <ul>
+                                    <li th:each="taco : ${order.tacos}"><span th:text="${taco.name}">taco name</span></li>
+                                </ul>
+                                <hr/>
+                                You can also <a th:href="@{/design}" id="another"><u>design another taco</u></a>
+                            </div>
+                        </div>
+
+                        <h3>Deliver my taco masterpieces to...</h3>
+
+                        <div class="form-group row">
+                            <label for="name" class="col-2 col-form-label">Name: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{deliveryName}"/>
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('deliveryName')}"
+                                  th:errors="*{deliveryName}">Name Error</div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="street" class="col-2 col-form-label">Street address: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{deliveryStreet}"/>
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('deliveryStreet')}"
+                                  th:errors="*{deliveryStreet}">Street Error
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="city" class="col-2 col-form-label">City: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{deliveryCity}"/>
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('deliveryCity')}"
+                                  th:errors="*{deliveryCity}">City Error
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="province" class="col-2 col-form-label">Province: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{deliveryProvince}"/>
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('deliveryProvince')}"
+                                  th:errors="*{deliveryProvince}">City Error
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="zip" class="col-2 col-form-label">Zip code: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{zip}"/>
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('zip')}"
+                                  th:errors="*{zip}">Zip Error
+                            </div>
+                        </div>
+
+                        <h3>Here's how I'll pay...</h3>
+
+                        <div class="form-group row">
+                            <label for="number" class="col-2 col-form-label">Credit Card #: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{number}" placeholder="Credit Card #"/>
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('number')}"
+                                  th:errors="*{number}">Number Error
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="expiration" class="col-2 col-form-label">Expiration: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{expiration}" placeholder="Expiration" />
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('expiration')}"
+                                 th:errors="*{expiration}">Expiration Error
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="cvv" class="col-2 col-form-label">CVV: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" th:field="*{cvv}" placeholder="CVV" />
+                            </div>
+                            <div class="text-danger"
+                                  th:if="${#fields.hasErrors('cvv')}"
+                                 th:errors="*{cvv}">CVV Error
+                            </div>
+                        </div>
+
+                        <div class="form-group" th:if="${#fields.hasErrors()}">
+                            <div class="text-danger">
+                            Please correct the problems below and resubmit.
+                            </div>
+                        </div>
+
+                        <input type="submit" class="btn btn-success offset-2" value="Submit order"/>
+
+                    </form>
                 </div>
-
-                <div class="form-group row">
-                    <label for="city" class="col-sm-2 col-form-label">City: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{deliveryCity}"/>
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('deliveryCity')}"
-                          th:errors="*{deliveryCity}">City Error
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label for="province" class="col-sm-2 col-form-label">Province: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{deliveryProvince}"/>
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('deliveryProvince')}"
-                          th:errors="*{deliveryProvince}">City Error
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label for="zip" class="col-sm-2 col-form-label">Zip code: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{zip}"/>
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('zip')}"
-                          th:errors="*{zip}">Zip Error
-                    </div>
-                </div>
-
-                <h3>Here's how I'll pay...</h3>
-
-                <div class="form-group row">
-                    <label for="number" class="col-sm-2 col-form-label">Credit Card #: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{number}" placeholder="Credit Card #"/>
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('number')}"
-                          th:errors="*{number}">Number Error
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label for="expiration" class="col-sm-2 col-form-label">Expiration: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{expiration}" placeholder="Expiration" />
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('expiration')}"
-                         th:errors="*{expiration}">Expiration Error
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label for="cvv" class="col-sm-2 col-form-label">CVV: </label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" th:field="*{cvv}" placeholder="CVV" />
-                    </div>
-                    <div class="text-danger"
-                          th:if="${#fields.hasErrors('cvv')}"
-                         th:errors="*{cvv}">CVV Error
-                    </div>
-                </div>
-
-                <div class="form-group" th:if="${#fields.hasErrors()}">
-                    <div class="text-danger">
-                    Please correct the problems below and resubmit.
-                    </div>
-                </div>
-
-
-                <input type="submit" class="btn btn-success" value="Submit order"/>
-                <p></p>
-            </form>
+            </div>
         </div>
     </body>
 </html>
